# ichigojam-firm

./: .gitignore  CLAUDE.md  CLAUDE.md.20260411  CLAUDE.md.20260503
IchigoJam_BASIC/: ichigojam-stddef.h
IchigoJam_MCX/drivers/: fsl_pwm.c
IchigoJam_MCX/source/: ichigojam-io.h
IchigoJam_Z/: .gitignore  CMakeLists.txt  README.md  frdm_mcxa153.overlay  hardware_map.yaml  prj.conf  rpi_pico.overlay  testcase.yaml
IchigoJam_Z/boards/: frdm_mcxa153.overlay  frdm_mcxc444.overlay  frdm_mcxn947_mcxn947_cpu0.overlay  rpi_pico.overlay
IchigoJam_Z/pinmap/: frdm_mcxa153.txt  pico.txt
IchigoJam_Z/pinmap/frdm_mcxa153/: frdm_mcxa153.txt
IchigoJam_Z/pinmap/frdm_mcxc444/: frdm_mcxc444.txt
IchigoJam_Z/pinmap/frdm_mcxn947/: frdm_mcxn947.txt
IchigoJam_Z/pinmap/rpi_pico/: pico.txt
IchigoJam_Z/src/: config.h  display.h  ext_ws.h  flashstorage.h  ichigojam-io.h  keyboard.h  main.c  sound.h  system.h  usr.h
IchigoJam_Z/test_basic_src/: 0_hello.basic  1_test_led.basic  2_test_btn.basic  3_test_out.basic  4_test_in.basic  5_test_pwm.basic  6_test_ana.basic  6_test_ana_pico.basic  hello.basic  read_i2c_lm75b.basic  test_ana.basic  test_beep_play_wait.basic  test_btn.basic  test_in.basic  test_out.basic  test_pwm.basic  test_usr.basic  thumb_instructions.md
IchigoJam_Z/tests/basic_verification/: testcase.yaml
